--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
 
     <title>{{site.title}}</title>
 
-    <link rel="canonical" href="{{site.url}}{{page.url}}"/>
+    <link rel="canonical" href="{{site.baseurl}}{{page.url}}"/>
     <link rel="apple-touch-icon" href="{{site.profile_pic}}">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
 
