--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,15 +7,15 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Knowledge Continuum" property="og:site_name"/>
     <meta content="A non-linear thread of important ideas weaved together to explore and understand the fabric of knowledge." property="og:description">
-    <meta content="{{ site.url }}/about/" property="article:author">
+    <meta content="{{ site.baseurl }}/about/" property="article:author">
 
     {%- if page.title -%}
     <meta content="{{ page.title }}" property="og:title">
     <meta content="article" property="og:type">
-    <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+    <meta content="{{ site.baseurl }}{{ page.url }}" property="og:url">
     {%- else -%}
     <meta content="website" property="og:type">
-    <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+    <meta content="{{ site.baseurl }}{{ page.url }}" property="og:url">
     {%- endif -%}
 
     <title>{{site.title}}</title>
@@ -31,7 +31,7 @@
         <link href="/assets/css/ie-target.css" rel="stylesheet" type="text/css"/>
     <![endif]-->
     <!--<link href="/assets/css/prism.css" rel="stylesheet" />-->
-    <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
+    <link rel="alternate" type="application/rss+xml" href="{{ site.baseurl }}/feed.xml">
 </head>
 
 <body>
