updating tags permalink in front matter

--- a/_includes/contextmenu.html
+++ b/_includes/contextmenu.html
@@ -20,5 +20,5 @@
 </nav>
 <nav class="context-menu-res" id="context-menu-res">
 </nav>
-<script src="/assets/js/contextmenu.js"></script>
+<script src="{{ site.baseurl }}/assets/js/contextmenu.js"></script>
 {%- endif -%}
