updating index page link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <header>
     <div class="notes-page-subheader disable-select">
         <div class="notes-page-site-heading">
-            <p><a href="{{ site.baseurl }}/index.html">{{site.title}}</a></p>
+            <p><a href="{{ site.baseurl }}">{{site.title}}</a></p>
         </div>
         
         <div class="notes-page-main-heading">
