updating search link in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
         <input type="text" oninput="changeResultContainerDisp(this.value)" id="search-input" autocomplete="off" placeholder="Search Notes..."/>
         <ul id="results-container"></ul>
     </div>
-    <script src="/assets/js/simple-jekyll-search.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
     <script>
         function changeResultContainerDisp(val) {
             if (val) {
