--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         </div>
         
         <div class="notes-page-main-heading">
-            <p class="notes-page-heading"><a href="/notes">Notes and Thoughts</a></p>
+            <p class="notes-page-heading"><a href="{{ site.baseurl }}/notes">Notes and Thoughts</a></p>
             <p class="notes-page-tagline">The journey from raw thoughts to <a href="/">blogposts</a></p>
         </div>
     </div>
@@ -44,7 +44,7 @@
                     })   
     </script>
     {%- if page.permalink == "/notes" -%}
-    <div class="notes-page-subheader disable-select" id="scroll-head" onclick="window.location.assign('/');">
+    <div class="notes-page-subheader disable-select" id="scroll-head" onclick="window.location.assign('{{ site.baseurl }}');">
         <div class="back-icon">
             <svg class="ripple" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
                 <path d="M0 0h24v24H0z" fill="none"/>
