--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
         </div>
         
         <div class="notes-page-main-heading">
-            <p class="notes-page-heading"><a href="/notes">Notes and Thoughts</a></p>
-            <p class="notes-page-tagline">The journey from raw thoughts to <a href="/">blogposts</a></p>
+            <p class="notes-page-heading"><a href="/notes"></a></p>
+            <p class="notes-page-tagline"> <a href="/"></a></p>
         </div>
     </div>
     <div class="searchbar search-container">
